--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/_CustomerList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/_CustomerList.cshtml
@@ -3,8 +3,8 @@
         <tr>
             <th style="text-align:left">Customer Code</th>
             <th style="text-align:left">Customer Name</th>
-            <th style="text-align:left">Manufacturing Days</th>
-            <th style="text-align:left">Description</th>
+            <th style="text-align:left">Contact No</th>
+            <th style="text-align:left">Email</th>
             <th class="action-col"></th>
         </tr>
     </thead>
@@ -21,11 +21,11 @@
                     <td title="@data.Customer_Name" style="width:90%">
                         @data.Customer_Name
                     </td>
-                    <td title="@data.Manufacturing_Days" style="width:90%">
-                        @data.Manufacturing_Days
+                    <td title="@data.Contact_No" style="width:90%">
+                        @data.Contact_No
                     </td>
-                    <td title="@data.Description" style="width:90%">
-                        @data.Description
+                    <td title="@data.Email" style="width:90%">
+                        @data.Email
                     </td>                    
                     <td class="clsAction" style="width:10%">
                         <a href="javascript:void(0);" title="Edit" class="clsEditCustomer">
