--- a/Frontend/InventoryTool/InventoryTool.UI/Content/custom-css/shared.css
+++ b/Frontend/InventoryTool/InventoryTool.UI/Content/custom-css/shared.css
@@ -343,4 +343,26 @@ a:hover {
     background: -o-linear-gradient(to bottom, rgb(191,191,191) 0%,rgb(216,216,216) 100%);
 }
 
+.myButton {
+	background-color:#44c767;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:10px 30px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:#5cbf2a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
 
