--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/_CustomerList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/_CustomerList.cshtml
@@ -1,10 +1,18 @@
-﻿<table style="width:100%;" cellspacing="0" class="table table-bordred" id="tblCustomerList">
+﻿<table class="table table-bordred" id="tblCustomerList" >
     <thead>
         <tr>
             <th style="text-align:left">Customer Code</th>
             <th style="text-align:left">Customer Name</th>
             <th style="text-align:left">Contact No</th>
             <th style="text-align:left">Email</th>
+            @*<th style="text-align:left">Address1</th>
+            <th style="text-align:left">Address2</th>*@
+            <th style="text-align:left">City</th>
+            @*<th style="text-align:left">State</th>
+            <th style="text-align:left">Pin Code</th>
+            <th style="text-align:left">Tin No</th>
+            <th style="text-align:left">Vat No</th>
+            <th style="text-align:left">Note</th>*@
             <th class="action-col"></th>
         </tr>
     </thead>
@@ -15,23 +23,47 @@
             {
                 //Display mode row start here
                 <tr data-Customer_Id="@data.Customer_Id" class="display-mode">
-                    <td title="@data.Customer_Code" style="width:90%">
+                    <td title="@data.Customer_Code" >
                         @data.Customer_Code
                     </td>
-                    <td title="@data.Customer_Name" style="width:90%">
+                    <td title="@data.Customer_Name" >
                         @data.Customer_Name
                     </td>
-                    <td title="@data.Contact_No" style="width:90%">
+                    <td title="@data.Contact_No" >
                         @data.Contact_No
                     </td>
-                    <td title="@data.Email" style="width:90%">
+                    <td title="@data.Email" >
                         @data.Email
-                    </td>                    
-                    <td class="clsAction" style="width:10%">
+                    </td>  
+                    @*<td title="@data.Address1" >
+                        @data.Address1
+                    </td>  
+                    <td title="@data.Address2" >
+                        @data.Address2
+                    </td>*@  
+                    <td title="@data.City" >
+                        @data.City
+                    </td>  
+                    @*<td title="@data.State" >
+                        @data.State
+                    </td>  
+                    <td title="@data.PinCode" >
+                        @data.PinCode
+                    </td>  
+                    <td title="@data.TinNo" >
+                        @data.TinNo
+                    </td> 
+                    <td title="@data.VatNo" >
+                        @data.VatNo
+                    </td>  
+                    <td title="@data.Note" >
+                        @data.Note
+                    </td>*@                    
+                    <td class="clsAction" >
                         <a href="javascript:void(0);" title="Edit" class="clsEditCustomer">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="javascript:void(0);" title="Delete" class="clsDeleteCustomer" @*name="deleteCustomer"*@>
+                        <a href="javascript:void(0);" title="Delete" class="clsDeleteCustomer" >
                             <span class="glyphicon glyphicon-remove-sign"></span>
                         </a>
                     </td>
